# devka

./: .gitignore  .gitmodules  CMakeLists.txt
devka-common/: CMakeLists.txt
devka-common/src/devka-common/: common.hpp  pch.cpp  pch.hpp
devka-common/src/devka-common/event/: event.hpp
devka-common/src/devka-common/log/: log.cpp  log.hpp
devka-common/src/devka-common/units/: primitives.hpp
devka-common/src/devka-common/utils/: dll.hpp  flow.hpp  macro.hpp  preset.hpp  utils.hpp
devka-graphics/: CMakeLists.txt
devka-graphics/src/devka-graphics/: graphics.cpp  graphics.hpp
devka-graphics/src/devka-graphics/events/: key_event.cpp  key_event.hpp  mouse_event.cpp  mouse_event.hpp  window_context_event.cpp  window_context_event.hpp
devka-graphics/src/devka-graphics/graphic/: graphic_api_check.cpp  graphic_api_check.hpp  graphic_export.cpp  graphic_export.hpp  opengl.cpp  opengl.hpp
devka-graphics/src/devka-graphics/objects/: mesh.cpp  mesh.hpp
devka-graphics/src/devka-graphics/render/: buffer.cpp  buffer.hpp  render_api.cpp  render_api.hpp  vertex_array.cpp  vertex_array.hpp  window_context.cpp  window_context.hpp
devka-graphics/src/devka-graphics/render/opengl/: opengl_buffer.cpp  opengl_buffer.hpp  opengl_render_api.cpp  opengl_render_api.hpp  opengl_vertex_array.cpp  opengl_vertex_array.hpp  opengl_window_context.cpp  opengl_window_context.hpp
devka-physics/: CMakeLists.txt
devka-physics/src/devka-physics/: physics.hpp
devka-world/: CMakeLists.txt
devka-world/src/devka-world/: universe.hpp  world.cpp  world.hpp
devka-world/src/devka-world/core/: application.cpp  application.hpp  window.cpp  window.hpp
editor/: CMakeLists.txt
editor/src/editor/: editor.cpp
